--- a/templates/lab8/edit.html
+++ b/templates/lab8/edit.html
@@ -17,12 +17,12 @@
         <form method="post" class="lab8-form">
             <div class="lab8-form-group">
                 <label>Название:</label>
-                <input type="text" name="title" class="lab8-input" value="{{ article.title }}" maxlength="50" required>
+                <input type="text" name="title" class="lab8-input" value="{{ article.title }}" maxlength="50">
             </div>
             
             <div class="lab8-form-group">
                 <label>Текст статьи:</label>
-                <textarea name="article_text" class="lab8-textarea" required>{{ article.article_text }}</textarea>
+                <textarea name="article_text" class="lab8-textarea">{{ article.article_text }}</textarea>
             </div>
             
             <div class="lab8-form-group">
